Fixed z-index for autocomplete, so that it works in modals, too
https://gitlab.ilscipio.com/scipio-dev/dev/scipioce-dev/issues/246

--- a/themes/base/webapp/base/scss/shared/_ui_autocomplete.scss
+++ b/themes/base/webapp/base/scss/shared/_ui_autocomplete.scss
@@ -1,1 +1,2 @@
 .ui-helper-hidden-accessible{display:none}
+.ui-autocomplete {z-index:9999;}
